tests/baselines/reference/structNotAllowInstanceMemberGetters.errors.txt
tests/cases/conformance/structs/members/accessibilityAndAccessor/structNotAllowInstanceMemberGetters.ts(7,5): error TS2304: Cannot find name 'get'.
tests/cases/conformance/structs/members/accessibilityAndAccessor/structNotAllowInstanceMemberGetters.ts(7,5): error TS20025: Unexpected token. A constructor, method, or property was expected.
tests/cases/conformance/structs/members/accessibilityAndAccessor/structNotAllowInstanceMemberGetters.ts(7,9): error TS1005: ';' expected.
tests/cases/conformance/structs/members/accessibilityAndAccessor/structNotAllowInstanceMemberGetters.ts(7,9): error TS2304: Cannot find name 'foo'.
tests/cases/conformance/structs/members/accessibilityAndAccessor/structNotAllowInstanceMemberGetters.ts(7,15): error TS1005: ';' expected.
tests/cases/conformance/structs/members/accessibilityAndAccessor/structNotAllowInstanceMemberGetters.ts(10,1): error TS1128: Declaration or statement expected.


==== tests/cases/conformance/structs/members/accessibilityAndAccessor/structNotAllowInstanceMemberGetters.ts (6 errors) ====
    // doc 2.2
    // Due to Typed Objects being nonextensible and non-configurable, accessors are not allowed.
    
    struct C {
        private _foo: string;
    
        get foo() { // error, getters are not allowed in struct
        ~~~
!!! error TS2304: Cannot find name 'get'.
        ~~~
!!! error TS20025: Unexpected token. A constructor, method, or property was expected.
            ~~~
!!! error TS1005: ';' expected.
            ~~~
!!! error TS2304: Cannot find name 'foo'.
                  ~
!!! error TS1005: ';' expected.
            return this._foo;
        }
    }
    ~
!!! error TS1128: Declaration or statement expected.